Added clear function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <input id="hex" placeholder="enter hex color"></input>
-<button id="clear" type="button" onclick="clear()"> CLEAR </button>
+<button id="clearbtn" type="button" onclick="clearFunction()"> CLEAR </button>
 <canvas id="draw"></canvas>
 
 <script src="app.js"></script>
+</html>
