--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
        	Web Paint!
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
-<input id="hex" placeholder="enter hex color"></input>
+<canvas id="draw" width="1200%" height="400%" style="border: 1px solid"></canvas>
+<input id="hex" placeholder="enter hex color" type="color-picker"></input>
 <button id="clearbtn" type="button" onclick="clearFunction()"> CLEAR </button>
-<canvas id="draw"></canvas>
 
 <script src="app.js"></script>
 </html>
